--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,11 @@
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-
+  
+  <!--Dont index this github pages now-->
+  <meta name="robots" content="noindex"> <!--=====  Please remove it ! ! !  ======-->
+  <meta name="googlebot" content="noindex"> <!--=====  Please remove it ! ! !  ======-->
+  
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
