--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -181,7 +181,7 @@ pre code {
 
 /* Pygments via Jekyll */
 .highlight {
-  margin: 1rem 0 1rem 0;
+  margin-bottom: 1rem;
   border-radius: 4px;
 }
 .highlight pre {
